@@ -1,4 +1,9 @@
 # 1.3
+
+transport.count-down=Count Down
+action.transport.count-down=Count Down
+
+
 track.short-solo-mute=S-M
 track.short-solo-mute.s=(S)
 track.short-solo-mute.m=(M)
